--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -14,12 +14,10 @@ on:
     types: [started]
 
 env:
-  MANIFEST: git://github.com/SKYHAWK-Recovery-Project/platform_manifest_twrp_omni.git -b android-9.0
-  DEVICE: rosy
-  DT_LINK: https://github.com/JamieHoSzeYui/android_recovery_xiaomi_rosy
-  DT_PATH: device/xiaomi/rosy
-  KERNEL_LINK: https://github.com/Pulkit077/kernel_xiaomi_rosy
-  KERNEL_PATH: kernel/xiaomi/rosy
+  MANIFEST: https://gitlab.com/OrangeFox/Manifest.git -b fox_9.0
+  DEVICE: R5x
+  DT_LINK: https://github.com/abhi9960/twrp_rmx1925 -b ofox
+  DT_PATH: device/realme/R5x
   TARGET: recoveryimage
   TZ: Asia/Kolkata
 
@@ -52,13 +50,16 @@ jobs:
              repo init -u $MANIFEST --depth=1 --groups=all,-notdefault,-device,-darwin,-x86,-mips
              repo sync -j4
              git clone $DT_LINK --depth=1 --single-branch $DT_PATH
-             git clone $KERNEL_LINK --depth=1 --single-branch $KERNEL_PATH
              
        - name: Build
          run: |
               cd work
               . build/envsetup.sh &&lunch omni_$DEVICE-eng &&export ALLOW_MISSING_DEPENDENCIES=true && mka $TARGET
              
+       - name: hotfix
+         run: |
+              rm -rf out/target/product/R5x/ClassicTheme.zip
+              
        - uses: actions/upload-artifact@v2
          with:
           name: recoveryzip
